Correccoes nas CSS do header para terem mais z-index que os glyphicons do registo. Corrigidos bugs na validacao de registo de utilizador. Apagada página de perfil desnecessária. Mensagens flash de confirmacao de email numa div

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -139,6 +139,10 @@ hr {
 	width:23px;
 }
 
+.message {
+	margin:30px 0px;
+}
+
 @media only screen and (min-width: 980px) {
 	
 	body, html {
